# skillbrew

./: .env.example  .gitignore  CONTRIBUTING.md  HANDOFF.md  PROJECT_CHARTER.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  pypi-publish.yml
docs/: index.html  robots.txt  sitemap.xml
scripts/: check_docs_sync.py  probe_deepseek_vision.py  probe_deepseek_vision_url.py  probe_provider.py  register_install_a.py  smoke_test.py  vision_keyframes.py
skillbrew/: __init__.py  __main__.py  _logging.py  _utils.py  cli.py  config.py  dedup.py  errors.py  ingest.py  install.py  installer.py  llm.py  marketplace.py  mcp_catalog.py  notify.py  plan.py  ratelimit.py  recommend.py  record.py  registry.py  understand.py  verify.py
skillbrew/cli/: __init__.py  parser.py  utils.py
skillbrew/cli/commands/: __init__.py  add.py  config.py  dedup.py  doctor.py  ingest.py  install.py  market.py  plan.py  recommend.py  record.py  run.py  understand.py  verify.py
skillbrew/install/: __init__.py  __main__.py  executor.py  mcp_toml.py  resolver.py  spec.py  utils.py
skillbrew/marketplaces/: __init__.py  base.py  registry_official.py  smithery.py
skillbrew/schema/: __init__.py  models.py
skillbrew/sources/: __init__.py  _helpers.py  base.py  bilibili.py  douyin.py  text.py  webpage.py  youtube.py
tests/: test_add.py  test_cli_binary_check.py  test_cli_parser.py  test_cli_spinner.py  test_error_surfacing.py  test_install_resolve.py  test_install_selective.py  test_installed_index.py  test_installer_cache.py  test_installer_infer.py  test_installer_spec.py  test_judge_ai_mock.py  test_llm_temperature.py  test_marketplace.py  test_marketplaces.py  test_mcp_toml.py  test_ratelimit.py  test_record_d22.py  test_runtime_neutral.py  test_schema.py  test_sources_adapters.py  test_understand_core.py
