[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skillbrew"
version = "0.0.1"
description = "技能酿造局：丢链接进去，酿出可装的能力，自动去重，装完出报告，让你清楚 Agent 里有什么、怎么调"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "skillbrew contributors"}]
dependencies = [
    "openai>=1.0",
    "numpy>=1.20",
    "Pillow>=9.0",
]

[project.urls]
repository = "https://github.com/Rookage/skillbrew"
homepage = "https://rookage.github.io/skillbrew"

[project.optional-dependencies]
# 视频获取与 ASR（MVP B站单源才需要；较大，按需安装避免拖慢）
media = [
    "yt-dlp",
    "faster-whisper",
]
dev = [
    "pytest",
]

[project.scripts]
skillbrew = "skillbrew.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["skillbrew*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
