[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skillbrew"
version = "0.0.1"
description = "技能酿造局：丢链接进去，酿出可装的能力，自动去重，装完出报告，让你清楚 Agent 里有什么、怎么调"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "skillbrew contributors"}]
dependencies = [
    "openai>=1.0",
    "numpy>=1.20",
    "Pillow>=9.0",
    "beautifulsoup4>=4.15.0",
    "requests>=2.34.2",
]

[project.urls]
repository = "https://github.com/Rookage/skillbrew"
homepage = "https://rookage.github.io/skillbrew"

[project.optional-dependencies]
# 视频获取与 ASR（MVP B站单源才需要；较大，按需安装避免拖慢）
media = [
    "yt-dlp",
    "faster-whisper",
]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
skillbrew = "skillbrew.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["skillbrew*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["scripts/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # 中文/HTML 字符串天然行长, ignore 而非逐个 suppress

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]
